--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,22 +10,26 @@ set(Python_FIND_VIRTUALENV ONLY)
 find_package(Python COMPONENTS Interpreter Development)
 find_package(pybind11 CONFIG)
 find_package(imgui REQUIRED)
+find_package(argparse REQUIRED)
 
 set(VENV ${CMAKE_BINARY_DIR}/venv)
 set(PYDIR ${VENV}/bin)
-#execute_process(COMMAND_ECHO STDOUT COMMAND ${Python_EXECUTABLE} -m venv ${VENV})
-#execute_process(COMMAND_ECHO STDOUT COMMAND ${PYDIR}/python -m pip install wgrd-cons-parsers wgrd-cons-tools)
+execute_process(COMMAND_ECHO STDOUT COMMAND ${Python_EXECUTABLE} -m venv ${VENV})
+execute_process(COMMAND_ECHO STDOUT COMMAND ${PYDIR}/python -m pip install wgrd-cons-parsers wgrd-cons-tools)
+
+add_subdirectory(deps/wgrd-tools/)
 
 add_executable(modding_suite
+		ImGuiFileDialog/ImGuiFileDialog.cpp
 		main.cpp
 		imgui_impl_glfw.cpp
 		imgui_impl_opengl3.cpp
 		file_tree.cpp
 		file_tree.h
-		files.cpp
-		files.h
 		wgrd_files.cpp
 		wgrd_files.h
+    maingui.cpp
+    maingui.hpp
 )
 
 target_link_libraries(modding_suite
@@ -34,6 +38,13 @@ target_link_libraries(modding_suite
 	glfw
 	OpenGL::GL
 	imgui::imgui
+	argparse::argparse
+  etceterapp
+)
+
+target_include_directories(modding_suite
+PRIVATE
+deps/wgrd-tools/src
 )
 
 install(TARGETS modding_suite DESTINATION bin)
