ucrt64 is wrong

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -2,7 +2,7 @@ name: MSYS2
 on: [push, pull_request]
 
 jobs:
-  msys2-ucrt64:
+  msys2-x64:
     runs-on: windows-latest
     defaults:
       run:
@@ -13,9 +13,9 @@ jobs:
           submodules: 'recursive'
       - uses: msys2/setup-msys2@v2
         with:
-          msystem: UCRT64
+          msystem: x86_64
           update: true
-          install: git mingw-w64-ucrt-x86_64-gcc python make ninja cmake mingw-w64-x86_64-glfw mingw-w64-x86_64-libepoxy mingw-w64-x86_64-pybind11
+          install: git mingw-w64-x86_64-gcc python make ninja cmake mingw-w64-x86_64-glfw mingw-w64-x86_64-libepoxy mingw-w64-x86_64-pybind11
       - name: CI-Build
         run: |
           ./ci-build.sh
