--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ target_link_libraries(modding_suite
 	PRIVATE
   ${GLFW3_LIBRARY}
 	pybind11::embed
-  $<$<BOOL:${WIN32}>:intl kernel32 opengl32 glu32 -static>
+  $<$<BOOL:${WIN32}>:intl iconv kernel32 opengl32 glu32 -static>
 	${LibEpoxy_LIBRARIES}
   imgui
   ndf
