go back to ucrt

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -13,9 +13,9 @@ jobs:
           submodules: 'recursive'
       - uses: msys2/setup-msys2@v2
         with:
-          msystem: MINGW64
+          msystem: UCRT64
           update: true
-          install: mingw-w64-x86_64-gcc mingw-w64-x86_64-python mingw-w64-x86_64-make mingw-w64-x86_64-ninja mingw-w64-x86_64-cmake mingw-w64-x86_64-glfw mingw-w64-x86_64-libepoxy mingw-w64-x86_64-pybind11 mingw-w64-x86_64-libiconv
+          install: mingw-w64-ucrt-x86_64-gcc mingw-w64-ucrt-x86_64-python mingw-w64-ucrt-x86_64-make mingw-w64-ucrt-x86_64-ninja mingw-w64-ucrt-x86_64-cmake mingw-w64-ucrt-x86_64-glfw mingw-w64-ucrt-x86_64-libepoxy mingw-w64-ucrt-x86_64-pybind11 mingw-w64-ucrt-x86_64-libiconv
       - name: CI-Build
         run: |
           ./ci-build.sh
