--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,7 @@ find_package(GLFW3 REQUIRED)
 find_package(Gettext REQUIRED)
 find_package(Epoxy REQUIRED)
 set(Python_FIND_VIRTUALENV ONLY)
-#find_package(Python COMPONENTS Interpreter Development)
-set(PYBIND11_FINDPYTHON ON)
+find_package(Python COMPONENTS Interpreter Development)
 find_package(pybind11 CONFIG REQUIRED HINTS /mingw64/lib/cmake/pybind11 /mingw64/include /mingw64)
 
 set(VENV ${CMAKE_BINARY_DIR}/venv)
