--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -24,5 +24,5 @@ jobs:
           name: build
           path: |
             build/*.dll
+            build/*.exe
             build/venv/
-            build/modding_suite.exe
