add bat file for starting

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           name: build
           path: |
+            build/*.bat
             build/*.dll
             build/*.exe
             build/venv/
