--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/magic_enum"]
 	path = deps/magic_enum
 	url = https://github.com/Neargye/magic_enum
+[submodule "deps/toml11"]
+	path = deps/toml11
+	url = https://github.com/ToruNiina/toml11
