--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -8,9 +8,12 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
       - uses: msys2/setup-msys2@v2
         with:
           msystem: UCRT64
